--- a/public/assets/css/projects.css
+++ b/public/assets/css/projects.css
@@ -90,6 +90,7 @@ h1 {
 }
 
 img {
+    width: 50px;
     height: 50px;
 }
 
@@ -103,8 +104,8 @@ img {
 }
 
 .project-item a {
-    right: 10%;
-    bottom: 15%;
+    position: relative;
+    left: 80%;
     color: aquamarine;
     text-decoration: none;
     font-weight: bold;
@@ -293,9 +294,23 @@ img {
     color: white;
 }
 
+.follower-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    gap: 5px;
+}
+
+.follower-item {
+    border: 1px solid white;
+    border-radius: 8px;
+    padding: 5px;
+    width: 150px;
+}
+
 .selected-followers-container {
     display: flex;
-    flex-wrap: wrap;
+
     gap: 10px;
 }
 
